--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-Flask==2.0.3
 firebase-admin==5.1.0
 pymongo[srv]==3.11
 pandas
@@ -14,3 +13,5 @@ torch
 torchvision
 Flask-Mail
 flask-socketio
+Flask>=2.2.0
+Werkzeug>=2.2.0
